config/audit-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit
  annotations:
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: 'https://gitlab.com/ocp-demo/backend_quarkus'
  labels:
    app.kubernetes.io/component: audit
    app.kubernetes.io/instance: audit
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: Audit
    app.openshift.io/runtime: quarkus
    app.openshift.io/runtime-version: '8'
    export-service: "true"
spec:
  replicas: 5
  selector:
    matchLabels:
      app: audit
      version: v1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: audit
        version: v1
        export-service: "true"
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: audit
        image: quay.io/voravitl/backend-native:v1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "0.05"
            memory: 40Mi
          limits:
            cpu: "0.2"
            memory: 120Mi
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          drop: ALL
          readOnlyRootFilesystem: false
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: audit
  labels:
    app: audit
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  selector:
    app: audit
---
